--- a/about.html
+++ b/about.html
@@ -12,5 +12,5 @@ I believe that developing ( Native ) iOS Applications is more successful than us
 
 Support my repos by starring or forking it!
 
-<iframe src="https://ghbtns.com/github-btn.html?user=panossakkos&repo=personal-jekyll-theme&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-<iframe src="https://ghbtns.com/github-btn.html?user=panossakkos&repo=personal-jekyll-theme&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+<iframe src="https://ghbtns.com/github-btn.html?user=mortgy&repo=MGCacheManager&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+<iframe src="https://ghbtns.com/github-btn.html?user=mortgy&repo=MGCacheManager&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
